--- a/Array/.vscode/settings.json
+++ b/Array/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "vector": "cpp"
+        "*.ejs": "html",
+        "vector": "cpp",
+        "ostream": "cpp"
     }
 }
