--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "C_Cpp.default.compilerPath": "D:\\MinGW\\bin\\gcc.exe"
+    "C_Cpp.default.compilerPath": "D:\\MinGW\\bin\\gcc.exe",
+    "files.associations": {
+        "*.ejs": "html",
+        "iostream": "cpp"
+    }
 }
